--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
+    "bcrypt": "^6.0.0",
+    "immer": "^10.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "24.0.1",
